Trabajando con el DOM primera parte

--- a/01_Repaso_HTML/index.html
+++ b/01_Repaso_HTML/index.html
@@ -1,14 +1,19 @@
-<!-- Le indica al browser que version de html se usa, en este caso html 5 -->
+<!--
+The <!DOCTYPE html> declaracion para definir que este documento es HTML5
+The <html> elemento root o principal  de una pagina HTML.
+The <head> elemento para especificar informacion meta sobre una pagina.
+The <title> elemento que especifica un titulo.
+The <body> elemento en donde se muestra el contenido de una pagina web.
+The <h1> heading 1
+The <p> parrafo
+-->
 <!DOCTYPE html>
-<!-- Tag global -->
 <html>
-    <!--El encabezado de la pagina, se incluyen archivos externos CSS -->
     <head>
         <meta charset="utf-8">
         <title>Js Bootcamp!!</title>
-
     </head>
-    <!-- El contenido de nuestra pagina web o aplicacion -->
+    
     <body>
         <div>
             <p>Hola Mundo!!</p>
