--- a/01_Repaso_HTML/index.html
+++ b/01_Repaso_HTML/index.html
@@ -10,13 +10,13 @@ The <p> parrafo
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>Js Bootcamp!!</title>
     </head>
     
     <body>
         <div>
-            <p>Hola Mundo!!</p>
+            <p>Hola Mundo</p>
         </div>
     </body>
 </html>
