--- a/02_Insertar_JavaScript/index_2.html
+++ b/02_Insertar_JavaScript/index_2.html
@@ -5,7 +5,7 @@
  -->
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>Js Bootcamp!!</title>
     </head>
     <body>
