Objetos en javascript

--- a/11_JS_OO/index.html
+++ b/11_JS_OO/index.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Segunda pagina</p>
-    <script>
-        console.log(window.location.href);
-    </script>
+    <script src="./index.js"></script>
 </body>
 </html>
