--- a/10_Formularios/10.2_Validaciones/10.2.1/index.html
+++ b/10_Formularios/10.2_Validaciones/10.2.1/index.html
@@ -31,7 +31,7 @@
                 <input type="password" class="form-control" id="password" name="password">
             </div>
             <button  type="button" class="btn btn-primary" onclick="validarDatos()">Guardar</button>
-            <a href="./segundaPagina.html" class="btn btn-warning">Volver</a>
+            <a href="./segundaPagina.html?id=123" class="btn btn-warning">Volver</a>
         </form>
     </div>
     <script>
