--- a/03_DOM_Basico/3.2_Buscando_Elementos/index.html
+++ b/03_DOM_Basico/3.2_Buscando_Elementos/index.html
@@ -2,31 +2,52 @@
 <html>
     <head>
         <title>Buscando elementos</title>
-        <link rel="stylesheet" href="estilos.css"/>
+        <style>
+            #contenedor{
+                width: 600px;       
+                margin: 0 auto;
+            }
+            #tituloPagina {
+                text-align: center;
+            }
+            .articulos {
+                margin-Top: 5px;
+                background-color: gray;
+            }
+            .tituloArticulo{
+                padding: 5px;
+                color: black;
+            }
+            p {
+                padding: 5px;
+                color: gainsboro;
+            }
+        </style>
     </head>
     <body>
         <div id="contenedor">
-            <div id="tituloPagina"></div>
+            <h1 id="tituloPagina">Buscando elementos HTML</h1>
+            <h2>Subtitulo</h2>
             <section>
-                    <article>
-                        <header class="encabezado">
-                            <h1 class="tituloArticulo">Titulo articulo 1</h1>
-                            <h3 class="subTituloArticulo">Sub titulo</h3>
-                        </header>
-                        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet urna eget nisi 
+                <article class="articulos">
+                    <header class="encabezado">
+                        <h1 class="tituloArticulo">Titulo articulo 1</h1>
+                    </header>
+                    <p class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet urna eget nisi 
                             maximus porttitor ac ut urna. Maecenas bibendum velit arcu, eget pulvinar quam rutrum in. Mauris sodales metus 
                             eget ipsum hendrerit facilisis. Donec viverra sed odio ac euismod. Aliquam condimentum nisl sit amet urna aliquam, sit amet fringilla mauris elementum. Vivamus ut urna eget sapien porta laoreet. Donec bibendum mi vitae risus aliquam, gravida efficitur magna euismod. Donec rhoncus justo at tellus feugiat porta. Aenean sed commodo lectus, nec sollicitudin leo. Nulla lacinia augue ex, non sollicitudin sapien vehicula quis.
-                             Donec vel tortor dolor. Vestibulum sed semper justo, a molestie risus.</p>
-                    </article>
-                    <article>
-                        <header class="encabezado">
-                            <h1 class="subTituloArticulo">Titulo articulo 2</h1>
-                            <h3>Sub titulo</h3>
-                        </header>
-                        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet urna eget nisi maximus porttitor
+                             Donec vel tortor dolor. Vestibulum sed semper justo, a molestie risus.
+                    </p>
+                </article>
+                <article class="articulos">
+                    <header class="encabezado">
+                        <h1 class="tituloArticulo">Titulo articulo 2</h1>
+                    </header>
+                    <p class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet urna eget nisi maximus porttitor
                              ac ut urna. Maecenas bibendum velit arcu, eget pulvinar quam rutrum in. Mauris sodales metus eget ipsum hendrerit facilisis. Donec viverra sed odio ac euismod. Aliquam condimentum nisl sit amet urna aliquam, sit amet fringilla mauris elementum. Vivamus ut urna eget sapien porta laoreet. Donec bibendum mi vitae risus aliquam, gravida efficitur magna euismod. Donec rhoncus justo at tellus feugiat porta. Aenean sed commodo lectus, nec sollicitudin leo. Nulla lacinia augue ex, non sollicitudin 
-                            sapien vehicula quis. Donec vel tortor dolor. Vestibulum sed semper justo, a molestie risus.</p>
-                    </article>
+                            sapien vehicula quis. Donec vel tortor dolor. Vestibulum sed semper justo, a molestie risus.
+                    </p>
+                </article>
             </section>
         </div>
         <script src="./index.js"></script>
