--- a/03_DOM_Basico/3.3_Manipulando_Elementos/index.html
+++ b/03_DOM_Basico/3.3_Manipulando_Elementos/index.html
@@ -14,14 +14,15 @@
             titulo.innerHTML = "<h1>Tutorial de Javascript</h2>"
 
             //Utilizando variables
-            //var titulo = document.getElementById("tituloPagina");
-           // titulo.innerHTML = "<h1>Manipulando el DOM</h2>";
+            var titulo = document.getElementById("tituloPagina");
+            titulo.innerHTML = "<h1>Manipulando el DOM</h2>";
 
             //Modificando el atributo de un elemento HTML
             //document.getElementById("logo").src = "./imagenes/Learn-Javascript.jpg";
 
             //Modificar el CSS de un elemento HTML
-           // titulo.style.color = "#354CC0";
+            titulo.style.backgroundColor = "#000"
+           titulo.style.color = "#354CC0";
            titulo.style.fontSize = "150%" // el size se calcula teniendo en cuenta el elemento padre.
             
         </script>
